@startuml BCE_ViewUserAccount
title View User Account

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "view_user_accounts.js" as B {
  +loadData()
  +renderView(user)
  +setUpButtons()
}

class "ReadUserAccountController" as C {
  +Account
  getUserAccount(int account_id)
}

class "Account" as E {
  +Account
  GetUsersById(int id)
}

B -- C
C -- E

@enduml
